build packages, modules and classes

--- a/patient_directory/.aws-sam/build.toml
+++ b/patient_directory/.aws-sam/build.toml
@@ -6,6 +6,6 @@ codeuri = "/Users/sashankasamantray/my_projects/backend/aws_projects/serverless/
 runtime = "java11"
 source_md5 = ""
 packagetype = "Zip"
-functions = ["PatientCheckoutFunction", "BillManagementFunction"]
+functions = ["PatientCheckoutFunction", "BillManagementFunction", "ErrorHandlingFunction"]
 
 [layer_build_definitions]
